# LLMGeneCircuitDiscovery

./: .env.example  .gitignore  README.md  build_blog_site.py  build_results_site.py  pyproject.toml  run_pipeline.py
Structural Analysis Pipeline/: analyze_mpnn_results.py  extract_binding_fragment.py  find_interface_contacts.py  fold_efs_and_src_model_1.cif  fragment_contacts.csv  fragment_report.txt  interface_3d_explorer.html  interface_contacts.csv  interface_viewer.html  interface_viz.pml  mpnn_results_report.txt  mpnn_results_summary.csv
Structural Analysis Pipeline/fold_cathy01/: fold_cathy01_full_data_0.json  fold_cathy01_full_data_1.json  fold_cathy01_full_data_2.json  fold_cathy01_full_data_3.json  fold_cathy01_full_data_4.json  fold_cathy01_job_request.json  fold_cathy01_model_1.cif  fold_cathy01_model_2.cif  fold_cathy01_model_3.cif  fold_cathy01_model_4.cif  fold_cathy01_summary_confidences_0.json  fold_cathy01_summary_confidences_1.json  fold_cathy01_summary_confidences_2.json  fold_cathy01_summary_confidences_3.json  fold_cathy01_summary_confidences_4.json
Structural Analysis Pipeline/fold_efs_and_src/: fold_efs_and_src_job_request.json  fold_efs_and_src_model_2.cif  fold_efs_and_src_model_3.cif  fold_efs_and_src_model_4.cif  fold_efs_and_src_summary_confidences_0.json  (+4 more)
configs/: pbmc_smoke.toml  pdac_gse242230.toml  pdac_gse242230_anthropic.toml  pdac_gse242230_anthropic_discovery_only.toml  pdac_gse242230_anthropic_opus.toml
llmgenecircuitdiscovery/: __init__.py
published_data/: README.md
scripts/: generate_report_pdf.py
tests/: conftest.py
(+69 files in other folders)
